--- a/view/taskInfo.html
+++ b/view/taskInfo.html
@@ -48,6 +48,18 @@
 </div>
 <div class="mainContents" id="mainContents_0" style="display:flex;flex-direction:column;" ng-controller="infoCon">
     <div style="font-size:1.5rem;font-weight:bold;"><%- title %></div>
+<!--    关联Task-->
+    <div style="display:flex;flex-direction:column;margin-bottom:0.5rem;">
+        <div style="display:flex;flex-direction:row;"></div>
+        <div ng-repeat="task in task.parent" style="border-radius:5px;background:rgba(250,250,250,1);position:relative;">
+            <task-type type="task.type"></task-type>
+            <span>{{task.title}}</span>
+             <a href="{{task._id | tasklink}}" style="margin-let:0.5rem;">check</a>
+        </div>
+    </div>
+
+
+    <!--    说明-->
     <div style="display:flex;flex-direction:row;"><button style="margin-left:auto" ng-disabled="taskUpdating" ng-click="switchAddDesc()">EDIT</button></div>
     <div style="min-height:1rem;padding:0.5rem;">
           <span ng-repeat="attach in task.attachments" class="backGrayBtn" style="padding:5px;margin-right:0.5rem;" ng-click="openAttach(attach.link,attach.name)">
@@ -57,7 +69,6 @@
     </div>
     <div style="margin-top:0.5rem;min-height:5rem;" ng-hide="addingDesc" id="description"><%- description %></div>
 
-<!--    补充说明-->
 
     <div ng-show="addingDesc" style="display:flex;flex-direction:column;border:solid 1px rgba(152,75,67,1);border-radius:5px;padding:1.5rem;box-shadow: 4px 0 5px -3px rgba(185,185,185,0.8);">
         <textarea style="min-height:6rem;" ng-disabled="taskUpdating" id="descriptionBox"></textarea>
